footer alignment fixes

--- a/captogov/css/styles.css
+++ b/captogov/css/styles.css
@@ -1319,7 +1319,7 @@ footer {
         width: 45%; } }
   .page-bottom-wrapper .region-bottom {
     padding: 30px 22px; }
-    @media (min-width: 961px) {
+    @media (min-width: 1121px) {
       .page-bottom-wrapper .region-bottom {
         padding: 30px 0; } }
     .page-bottom-wrapper .region-bottom #block-block-2 {
@@ -1355,12 +1355,14 @@ footer {
     .page-bottom-wrapper .region-bottom #block-menu-menu-footer-sub-menu {
       width: 100%;
       display: inline-block;
-      padding: 15px 0;
+      padding: 0 0 15px 0;
       font-size: 14px;
       font-size: 0.875rem; }
       @media (min-width: 792px) {
         .page-bottom-wrapper .region-bottom #block-menu-menu-footer-sub-menu {
           width: 46%; } }
+      .page-bottom-wrapper .region-bottom #block-menu-menu-footer-sub-menu ul {
+        margin: 0; }
       .page-bottom-wrapper .region-bottom #block-menu-menu-footer-sub-menu li {
         float: left;
         clear: none;
